--- a/src/components/menu/menu.ejs
+++ b/src/components/menu/menu.ejs
@@ -7,7 +7,8 @@
         <div class="category-nav-content-wrapper">
             <ul>
                 <li class="nav-li">                 
-                   <img src="<%= require('../../assets/images/5-menu.png') %>" alt="" srcset="">                   
+                   <img src="<%= require('../../assets/images/5-menu.png') %>" class="orgin-u" alt="" srcset="">
+                   <img src="<%= require('../../assets/images/5-menu-w.png')%>" class="orgin-w" alt="" srcset="">              
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -17,7 +18,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/6-menu.png" alt="" srcset="">
+                    <img src="<%= require('../../assets/images/6-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                    <img src="<%= require('../../assets/images/6-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -27,7 +29,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/7-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/7-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/7-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -37,7 +40,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/8-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/8-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/8-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -47,7 +51,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/9-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/9-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/9-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -57,7 +62,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/10-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/10-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/10-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -67,7 +73,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/11-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/11-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/11-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -77,7 +84,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/12-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/12-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/12-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -87,7 +95,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/13-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/13-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/13-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -97,7 +106,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/14-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/14-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/14-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -107,7 +117,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/15-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/15-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/15-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -117,7 +128,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/16-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/16-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/16-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -127,7 +139,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/17-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/17-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/17-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -137,7 +150,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/18-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/18-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/18-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -147,7 +161,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/19-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/19-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/19-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
@@ -157,7 +172,8 @@
                     <i class="nav-right-arrow"></i>
                 </li>
                 <li class="nav-li">
-                    <img src="../../assets/images/20-menu.png" alt="" srcset="">
+                        <img src="<%= require('../../assets/images/20-menu.png')%>" class="orgin-u"  alt="" srcset="">
+                        <img src="<%= require('../../assets/images/20-menu-w.png')%>" class="orgin-w" alt="">
                     <span class="nav-text-wrapper">
                         <span>
                             <a href="http://sh.meituan.com/meishi/" data-bid="b_atx2p7dc" data-lab="{&quot;custom&quot;:{&quot;cat_id&quot;:1,&quot;index&quot;:&quot;1_1&quot;,&quot;title&quot;:&quot;美食&quot;}}"
